# sarekt

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml  setup.sh
examples/: 00_base_code.rs  01_init_instance.rs  02_basic_loop.rs  03_loading_vertices.rs  04_loading_indexed_vertices.rs  05_uniform_buffers.rs  06_textures.rs  07_depth_buffer_test.rs  08_model_loading.rs  08_model_loading_obj.rs  08_model_loading_vtx_duplication.rs  09_mip_levels.rs  10_msaa.rs
models/: chalet.glb
shaders/: no_buffer_triangle.frag  no_buffer_triangle.vert  sarekt_forward.frag  sarekt_forward.vert
src/: error.rs  image_data.rs  lib.rs
src/renderer/: buffers.rs  buffers_and_images.rs  config.rs  debug_utils_ext.rs  drawable_object.rs  mod.rs  queue_family_indices.rs  renderer.rs  shaders.rs  vertex_bindings.rs  vulkan_renderer.rs
src/renderer/vulkan/: base_pipeline_bundle.rs  debug_utils_ext.rs  depth_buffer.rs  draw_synchronization.rs  images.rs  mod.rs  queue_family_indices.rs  queues.rs  shaders.rs  swap_chain.rs  vulkan_buffer_functions.rs  vulkan_buffer_image_functions.rs  vulkan_renderer.rs  vulkan_shader_functions.rs  vulkan_vertex_bindings.rs
src/renderer/vulkan/vulkan_renderer/: base_pipeline_bundle.rs  depth_buffer.rs  draw_synchronization.rs  mod.rs  pipelines.rs  render_attachments.rs  render_targets.rs  surface.rs  swap_chain.rs  vulkan_core.rs
