[package]
name = "sarekt"
version = "0.1.0-alpha"
authors = ["Brandon Pollack <brandonpollack23@gmail.com>"]
description = "An rendering engine based on Vulkan, but capable of being expanded to other graphics API backends such as Metal or D3D12"
license = "MIT"
repository = "https://github.com/brandonpollack23/sarekt"
readme = "README.md"
keywords = ["vulkan", "graphics", "ash", "rendering"]
documentation = "https://docs.rs/sarekt"
edition = "2018"

[[example]]
name = "00_base_code"
path = "examples/00_base_code.rs"

[[example]]
name = "01_init_instance"
path = "examples/01_init_instance.rs"

[[example]]
name = "02_basic_loop"
path = "examples/02_basic_loop.rs"

[[example]]
name = "03_loading_vertices"
path = "examples/03_loading_vertices.rs"

[[example]]
name = "04_loading_indexed_vertices"
path = "examples/04_loading_indexed_vertices.rs"

[dependencies]
ash = "0.29.0"
ash-window = "0.1.0"
lazy_static = "1.4.0"
log = "0.4.8"
memoffset = "0.5.3"
nalgebra = "0.20.0"
raw-window-handle = "0.3.3"
slotmap = "0.4.0"
static_assertions = "1.1.0"
vk-mem = "0.2.0"
vk-shader-macros = "0.2.2"
winit = "0.21.0"

# TODO CRITICAL when ash updates their crate remove these patches.
[patch.crates-io]
ash = {git = "https://github.com/MaikKlein/ash"}
ash-window = {git = "https://github.com/norse-rs/ash-window"}

[dev-dependencies]
simple_logger = "1.5.0"
