[package]
name = "sarekt"
version = "0.0.2"
authors = ["Brandon Pollack <brandonpollack23@gmail.com>"]
description = "A rendering engine based on Vulkan, but capable of being expanded to other graphics API backends such as Metal or D3D12"
license = "Apache-2.0"
repository = "https://github.com/brandonpollack23/sarekt"
readme = "README.md"
keywords = ["vulkan", "graphics", "ash", "rendering"]
documentation = "https://docs.rs/sarekt"
edition = "2018"
exclude = ["models", "textures"]

[[example]]
name = "00_base_code"
path = "examples/00_base_code.rs"

[[example]]
name = "01_init_instance"
path = "examples/01_init_instance.rs"

[[example]]
name = "02_basic_loop"
path = "examples/02_basic_loop.rs"

[[example]]
name = "03_loading_vertices"
path = "examples/03_loading_vertices.rs"

[[example]]
name = "04_loading_indexed_vertices"
path = "examples/04_loading_indexed_vertices.rs"

[[example]]
name = "05_uniform_buffers"
path = "examples/05_uniform_buffers.rs"

[[example]]
name = "06_textures"
path = "examples/06_textures.rs"

[[example]]
name = "07_depth_buffer_test"
path = "examples/07_depth_buffer_test.rs"

[[example]]
name = "08_model_loading"
path = "examples/08_model_loading.rs"

[[example]]
name = "09_mip_levels"
path = "examples/09_mip_levels.rs"

[[example]]
name = "10_msaa"
path = "examples/10_msaa.rs"

[dependencies]
ash = "0.30.0"
ash-window = "0.3.0"
derive_builder = "0.9.0"
image = "0.23.2"
lazy_static = "1.4.0"
log = "0.4.8"
memoffset = "0.5.3"
raw-window-handle = "0.3.3"
safe-transmute = "0.11.0-rc.2"
slotmap = "0.4.0"
static_assertions = "1.1.0"
ultraviolet = "0.4.6"
vk-mem = "0.2.2"
vk-shader-macros = "0.2.2"

[dev-dependencies]
gltf = "0.15.2"
simple_logger = "1.5.0"
wavefront_obj = "7.0.0"
winit = "0.21.0"
itertools = "0.9.0"
